For NPC -fixed off centre display, added getting values selected

--- a/Styles/general.css
+++ b/Styles/general.css
@@ -14,6 +14,7 @@ main{
     
     display: flex;
     flex-direction: column;
+    margin-inline: auto;
 }
 
 
