--- a/Styles/npcs.css
+++ b/Styles/npcs.css
@@ -1,4 +1,5 @@
 /* NPC Page*/
+
 .npcSelection{
     margin-top: 1em;
     padding: 4px;
@@ -9,8 +10,9 @@
 
 .statBlockWrapper{
     display: flex;
+    align-self: center;
     justify-content: center;
-    padding: 8px;
+    margin: 4px;
 }
 
 .statBlock{
@@ -75,6 +77,7 @@
         grid-template-columns: 3, 1fr;
         grid-auto-rows: max-content;
         grid-template-areas: '. a a .';
+        justify-content: center;
     }
 
 
